--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,6 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 
-app_lucky_number:
-    path: /
-    controller: App\Controller\LuckyController::number
+# app_lucky_number:
+#     path: /
+#     controller: App\Controller\LuckyController::number
